# artifacts/api-server/src/routes/index.ts
@@ -1,12 +1,16 @@
 import { Router, type IRouter } from "express";
-import healthRouter from "./health";
-import analisarRouter from "./analisar";
-import iaRouter from "./ia";
+import healthRouter from "./health.js";
+import analisarRouter from "./analisar.js";
+import uploadRouter from "./upload.js";
+import iaRouter from "./ia.js";
+import formularioRouter from "./formulario.js";
 
 const router: IRouter = Router();
 
 router.use(healthRouter);
 router.use(analisarRouter);
+router.use(uploadRouter);
 router.use(iaRouter);
+router.use(formularioRouter);
 
 export default router;
